Fixed overflow issue in image viewer

--- a/wcfsetup/install/files/style/imageViewer.less
+++ b/wcfsetup/install/files/style/imageViewer.less
@@ -274,6 +274,7 @@
 	
 	> header {
 		height: 100px;
+		overflow: hidden;
 		padding: 1rem;
 		top: 0;
 		
